fix: custom scrollbar margin & table style

--- a/src/components/Select/style/Select.scss
+++ b/src/components/Select/style/Select.scss
@@ -163,8 +163,16 @@ $cls: #{$prefix}-#{$component};
     }
 
     ::-webkit-scrollbar-thumb {
-      background-color: $color-grey-dark;
+      background-color: transparent;
       border-radius: 2px;
+    }
+
+    ::-webkit-scrollbar-track {
+      margin: 2px 0;
+    }
+
+    :hover::-webkit-scrollbar-thumb {
+      background-color: $color-grey-dark;
     }
 
     &.p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight.p-focus,
